--- a/style/index.scss
+++ b/style/index.scss
@@ -465,6 +465,11 @@ input[type="range"]::-webkit-slider-thumb {
     bottom: 0rem;
     box-shadow: black 1rem 0.3rem 1rem;
     background-color: white;
+    overflow-y: scroll;
+  }
+
+  &__inner::-webkit-scrollbar {
+    display: none; /* 크롬, 사파리, 오페라, 엣지 */
   }
 }
 
