--- a/style/index.scss
+++ b/style/index.scss
@@ -50,6 +50,26 @@ input[type="range"]::-webkit-slider-thumb {
   visibility: hidden;
 }
 
+.alert-wrap {
+  &__modal {
+    width: 20rem;
+    height: 20rem;
+    background-color: red;
+    position: absolute;
+    z-index: 1001;
+    top: 35vh;
+    left: 42.2vw;
+  }
+  &__background {
+    width: 100vw;
+    height: 100vh;
+    background-color: black;
+    opacity: 0.6;
+    position: absolute;
+    z-index: 1000;
+  }
+}
+
 // ▲ 공통요소
 
 .mp3-container {
