--- a/style/index.scss
+++ b/style/index.scss
@@ -50,11 +50,55 @@ input[type="range"]::-webkit-slider-thumb {
   visibility: hidden;
 }
 
+.data-tooltip{
+  font-family: none;
+	background-color: #000000;
+	background-color: rgba(0, 0, 0, 0.8);
+  text-align: center;
+
+	border-radius: 0.3rem;
+
+	color: #FFFFFF;
+	font-size: 0.75rem;
+
+	top: 130%;
+	left: -1rem;
+	padding: 0.5rem 0.5rem;
+	position: absolute;
+	width: auto;
+	min-width: 3rem;
+	max-width: 5rem;
+	word-wrap: break-word;
+
+	z-index: 9999;
+}
+
+[data-tooltip-absolute]:hover {
+	position: absolute;
+}
+
+[data-tooltip-absolute]:hover:after {
+  @extend .data-tooltip;
+	content: attr(data-tooltip-absolute);
+}
+
+[data-tooltip-relative]:hover {
+	position: relative;
+}
+
+[data-tooltip-relative]:hover:after {
+  @extend .data-tooltip;
+  left: -1.3rem;
+	content: attr(data-tooltip-relative);
+}
+
+// ▲ 공통요소
+
 .alert-wrap {
   &__modal {
     width: 20rem;
     height: 20rem;
-    background-color: rgb(255, 219, 219);
+    background-color: rgb(255 164 12);
     position: absolute;
     z-index: 1001;
     top: 35vh;
@@ -77,11 +121,19 @@ input[type="range"]::-webkit-slider-thumb {
     }
     &__btn-wrap {
       position: absolute;
-      bottom: 3rem;
+      bottom: 1.5rem;
       &__confirm {
+        width: 5rem;
+        height: 3rem;
         font-family: inherit;
+        font-size: 1.5rem;
+        color: white;
+        background-color: black;
+        border-radius: 0.4rem;
+        cursor: pointer;
       }
       &__cancel {
+        @extend .alert-wrap__modal__btn-wrap__confirm;
         margin-left: 2rem;
       }
     }
@@ -95,8 +147,6 @@ input[type="range"]::-webkit-slider-thumb {
     z-index: 1000;
   }
 }
-
-// ▲ 공통요소
 
 .mp3-container {
   width: 100vw;
@@ -470,6 +520,7 @@ input[type="range"]::-webkit-slider-thumb {
       background-image: url("/img/clear.png");
       background-repeat: no-repeat;
       background-size: contain;
+      background-position: center;
       cursor: pointer;
     }
 
