--- a/style/index.css
+++ b/style/index.css
@@ -76,7 +76,7 @@ input[type=range]::-webkit-slider-thumb {
 .alert-wrap__modal {
   width: 20rem;
   height: 20rem;
-  background-color: rgb(255, 164, 12);
+  background-color: white;
   position: absolute;
   z-index: 1001;
   top: 35vh;
