--- a/style/index.scss
+++ b/style/index.scss
@@ -98,7 +98,7 @@ input[type="range"]::-webkit-slider-thumb {
   &__modal {
     width: 20rem;
     height: 20rem;
-    background-color: rgb(255 164 12);
+    background-color: white;
     position: absolute;
     z-index: 1001;
     top: 35vh;
