--- a/style/index.scss
+++ b/style/index.scss
@@ -50,6 +50,10 @@ input[type="range"]::-webkit-slider-thumb {
   visibility: hidden;
 }
 
+.display-none {
+  display: none;
+}
+
 .data-tooltip{
   font-family: none;
 	background-color: #000000;
@@ -96,13 +100,13 @@ input[type="range"]::-webkit-slider-thumb {
 
 .alert-wrap {
   &__modal {
-    width: 20rem;
+    width: 32rem;
     height: 20rem;
     background-color: white;
     position: absolute;
     z-index: 1001;
     top: 35vh;
-    left: 42vw;
+    left: 37vw;
     border: 0.2rem solid black;
     border-radius: 1rem;
     display: flex;
