--- a/style/index.scss
+++ b/style/index.scss
@@ -54,46 +54,46 @@ input[type="range"]::-webkit-slider-thumb {
   display: none;
 }
 
-.data-tooltip{
+.data-tooltip {
   font-family: none;
-	background-color: #000000;
-	background-color: rgba(0, 0, 0, 0.8);
+  background-color: #000000;
+  background-color: rgba(0, 0, 0, 0.8);
   text-align: center;
 
-	border-radius: 0.3rem;
+  border-radius: 0.3rem;
 
-	color: #FFFFFF;
-	font-size: 0.75rem;
+  color: #ffffff;
+  font-size: 0.75rem;
 
-	top: 130%;
-	left: -1rem;
-	padding: 0.5rem 0.5rem;
-	position: absolute;
-	width: auto;
-	min-width: 3rem;
-	max-width: 5rem;
-	word-wrap: break-word;
+  top: 130%;
+  left: -1rem;
+  padding: 0.5rem 0.5rem;
+  position: absolute;
+  width: auto;
+  min-width: 3rem;
+  max-width: 5rem;
+  word-wrap: break-word;
 
-	z-index: 9999;
+  z-index: 9999;
 }
 
 [data-tooltip-absolute]:hover {
-	position: absolute;
+  position: absolute;
 }
 
 [data-tooltip-absolute]:hover:after {
   @extend .data-tooltip;
-	content: attr(data-tooltip-absolute);
+  content: attr(data-tooltip-absolute);
 }
 
 [data-tooltip-relative]:hover {
-	position: relative;
+  position: relative;
 }
 
 [data-tooltip-relative]:hover:after {
   @extend .data-tooltip;
   left: -1.3rem;
-	content: attr(data-tooltip-relative);
+  content: attr(data-tooltip-relative);
 }
 
 // ▲ 공통요소
@@ -595,6 +595,56 @@ input[type="range"]::-webkit-slider-thumb {
         position: absolute;
         top: 2.2rem;
         left: 4.5rem;
+      }
+      &__menu-btn--hover {
+        width: 1.5rem;
+        height: 4rem;
+        position: absolute;
+        right: 0rem;
+        border: none;
+        border-left: 0.1rem solid black;
+        background-color: white;
+        box-shadow: 0rem 0rem 0.1rem 0.1rem black;
+        cursor: pointer;
+      }
+
+      &__menu-btn-toggle {
+        color: white;
+        background-color: rgb(255, 109, 133);
+      }
+
+      &__menu-btn--hover:hover {
+        transition: all 0.5s;
+        @extend .play-list-spread__inner__wrap__menu-btn-toggle;
+      }
+
+      &__menu-wrap {
+        width: 20.2rem;
+        height: 4rem;
+        background-color: rgba(0, 0, 0, 0.6);
+        display: flex;
+        position: absolute;
+        justify-content: center;
+        align-items: center;
+        &__play--hover {
+          font-family: inherit;
+          font-size: 1.5rem;
+          width: 3rem;
+          height: 2rem;
+          position: relative;
+          border: none;
+          cursor: pointer;
+          border-radius: 0.3rem;
+        }
+        &__play--hover:hover {
+          transition: all 0.3s;
+          color: white;
+          background-color: rgb(255, 109, 133);
+        }
+        &__delete--hover {
+          @extend .play-list-spread__inner__wrap__menu-wrap__play--hover;
+          margin-left: 1.5rem;
+        }
       }
     }
   }
