--- a/style/index.scss
+++ b/style/index.scss
@@ -1,4 +1,4 @@
-@import url("/style/reset.css");
+@import url("../style/reset.css");
 
 // ▼ 변수
 
@@ -11,7 +11,7 @@ $radius-1rem: 1rem;
 
 @font-face {
   font-family: "NanumPenScript-Regular";
-  src: url("/style/NanumPenScript-Regular.ttf") format("truetype");
+  src: url("../style/NanumPenScript-Regular.ttf") format("truetype");
 }
 
 // ▲ 폰트
@@ -276,7 +276,7 @@ input[type="range"]::-webkit-slider-thumb {
           width: 5rem;
           height: 5rem;
           border-radius: 3rem;
-          background-image: url("/img/play_img.png");
+          background-image: url("../img/play_img.png");
           background-repeat: no-repeat;
           background-size: contain;
           cursor: pointer;
@@ -284,7 +284,7 @@ input[type="range"]::-webkit-slider-thumb {
 
         &__play-btn--hover:hover {
           transition: all 0.5s;
-          background-image: url("/img/play_img_hover.png");
+          background-image: url("../img/play_img_hover.png");
           background-repeat: no-repeat;
           background-size: contain;
           cursor: pointer;
@@ -293,7 +293,7 @@ input[type="range"]::-webkit-slider-thumb {
         &__prev-btn--hover {
           width: 3rem;
           height: 3rem;
-          background-image: url("/img/prev_btn.png");
+          background-image: url("../img/prev_btn.png");
           background-repeat: no-repeat;
           background-size: contain;
           margin-top: 1rem;
@@ -304,7 +304,7 @@ input[type="range"]::-webkit-slider-thumb {
           transition: all 0.5s;
           width: 3rem;
           height: 3rem;
-          background-image: url("/img/prev_btn_hover.png");
+          background-image: url("../img/prev_btn_hover.png");
           background-repeat: no-repeat;
           background-size: contain;
           margin-top: 1rem;
@@ -315,7 +315,7 @@ input[type="range"]::-webkit-slider-thumb {
         &__next-btn--hover {
           width: 3rem;
           height: 3rem;
-          background-image: url("/img/next_btn.png");
+          background-image: url("../img/next_btn.png");
           background-repeat: no-repeat;
           background-size: contain;
           margin-top: 1rem;
@@ -326,7 +326,7 @@ input[type="range"]::-webkit-slider-thumb {
           transition: all 0.5s;
           width: 3rem;
           height: 3rem;
-          background-image: url("/img/next_btn_hover.png");
+          background-image: url("../img/next_btn_hover.png");
           background-repeat: no-repeat;
           background-size: contain;
           margin-top: 1rem;
@@ -338,7 +338,7 @@ input[type="range"]::-webkit-slider-thumb {
           width: 5rem;
           height: 5rem;
           border-radius: 3rem;
-          background-image: url("/img/pause_img.png");
+          background-image: url("../img/pause_img.png");
           background-repeat: no-repeat;
           background-size: contain;
           cursor: pointer;
@@ -346,7 +346,7 @@ input[type="range"]::-webkit-slider-thumb {
 
         &__pause-btn--hover:hover {
           transition: all 0.5s;
-          background-image: url("/img/pause_img_hover.png");
+          background-image: url("../img/pause_img_hover.png");
           background-repeat: no-repeat;
           background-size: contain;
           cursor: pointer;
@@ -356,7 +356,7 @@ input[type="range"]::-webkit-slider-thumb {
           transition: all 0.5s;
           width: 2rem;
           height: 2rem;
-          background-image: url("/img/loop.png");
+          background-image: url("../img/loop.png");
           background-repeat: no-repeat;
           background-size: contain;
           position: absolute;
@@ -369,7 +369,7 @@ input[type="range"]::-webkit-slider-thumb {
           transition: all 0.5s;
           width: 2rem;
           height: 2rem;
-          background-image: url("/img/loop_active.png");
+          background-image: url("../img/loop_active.png");
           background-repeat: no-repeat;
           background-size: contain;
           position: absolute;
@@ -382,7 +382,7 @@ input[type="range"]::-webkit-slider-thumb {
           transition: all 0.5s;
           width: 2rem;
           height: 2rem;
-          background-image: url("/img/loop_one_active.png");
+          background-image: url("../img/loop_one_active.png");
           background-repeat: no-repeat;
           background-size: contain;
           position: absolute;
@@ -395,7 +395,7 @@ input[type="range"]::-webkit-slider-thumb {
           transition: all 0.5s;
           width: 2rem;
           height: 2rem;
-          background-image: url("/img/shuffle-btn.png");
+          background-image: url("../img/shuffle-btn.png");
           background-repeat: no-repeat;
           background-size: contain;
           position: absolute;
@@ -408,7 +408,7 @@ input[type="range"]::-webkit-slider-thumb {
           transition: all 0.5s;
           width: 2rem;
           height: 2rem;
-          background-image: url("/img/shuffle-btn-active.png");
+          background-image: url("../img/shuffle-btn-active.png");
           background-repeat: no-repeat;
           background-size: contain;
           position: absolute;
@@ -427,7 +427,7 @@ input[type="range"]::-webkit-slider-thumb {
           &__volume-btn--hover {
             width: 2rem;
             height: 2rem;
-            background-image: url("/img/volume_on.png");
+            background-image: url("../img/volume_on.png");
             background-repeat: no-repeat;
             background-size: contain;
             position: absolute;
@@ -438,7 +438,7 @@ input[type="range"]::-webkit-slider-thumb {
 
           &__volume-btn--hover:hover {
             transition: all 0.5s;
-            background-image: url("/img/volume_on_hover.png");
+            background-image: url("../img/volume_on_hover.png");
             background-repeat: no-repeat;
             background-size: contain;
           }
@@ -446,7 +446,7 @@ input[type="range"]::-webkit-slider-thumb {
           &__volume-btn-mute--hover {
             width: 2rem;
             height: 2rem;
-            background-image: url("/img/mute_on.png");
+            background-image: url("../img/mute_on.png");
             background-repeat: no-repeat;
             background-size: contain;
             position: absolute;
@@ -457,7 +457,7 @@ input[type="range"]::-webkit-slider-thumb {
 
           &__volume-btn-mute--hover:hover {
             transition: all 0.5s;
-            background-image: url("/img/mute_on_hover.png");
+            background-image: url("../img/mute_on_hover.png");
             background-repeat: no-repeat;
             background-size: contain;
           }
@@ -507,21 +507,21 @@ input[type="range"]::-webkit-slider-thumb {
       padding: 0.75rem 0.75rem;
       border-radius: 4px;
       cursor: pointer;
-      background-image: url("/img/add.png");
+      background-image: url("../img/add.png");
       background-repeat: no-repeat;
       background-size: contain;
     }
 
     &__add--hover:hover {
       transition: all 0.5s;
-      background-image: url("/img/add_hover.png");
+      background-image: url("../img/add_hover.png");
     }
 
     &__clear--hover {
       width: 1.5rem;
       height: 1.5rem;
       margin-left: 2rem;
-      background-image: url("/img/clear.png");
+      background-image: url("../img/clear.png");
       background-repeat: no-repeat;
       background-size: contain;
       background-position: center;
@@ -530,7 +530,7 @@ input[type="range"]::-webkit-slider-thumb {
 
     &__clear--hover:hover {
       transition: all 0.5s;
-      background-image: url("/img/clear_hover.png");
+      background-image: url("../img/clear_hover.png");
     }
   }
 
@@ -553,7 +553,7 @@ input[type="range"]::-webkit-slider-thumb {
     &__arrow {
       width: 2rem;
       height: 2rem;
-      background-image: url("/img/arrow_left.png");
+      background-image: url("../img/arrow_left.png");
       background-repeat: no-repeat;
       background-size: contain;
     }
@@ -679,7 +679,7 @@ input[type="range"]::-webkit-slider-thumb {
     &__arrow {
       width: 2rem;
       height: 2rem;
-      background-image: url("/img/arrow_right.png");
+      background-image: url("../img/arrow_right.png");
       background-repeat: no-repeat;
       background-size: contain;
     }
